# Operating_systems_cpp

.devcontainer/: devcontainer.json
CourseProject/doc/: 215_Шаталов_КП.docx  ~WRL2826.tmp
CourseProject/src/: Buddy.cpp  Buddy.h  CMakeLists.txt  First_fit.cpp  First_fit.h  main.cpp  main1.cpp
lab1/doc/: 215_Шаталов_1.docx  Var.md
lab1/src/: a.out  child.cpp  main.cpp  task.cpp
lab2/doc/: 215_Шаталов_Лаб2.docx
lab2/src/: CMakeLists.txt  main.cpp
lab2/tests/: test.txt  test100_100.txt
lab3/doc/: 215_Шаталов_Лаб3.docx  ~$5_Шаталов_Лаб3.docx
lab3/src/: CMakeLists.txt  child  child.cpp  f1  f2  main  main.cpp
lab4/doc/: 215_Шаталов_Лаб4.docx  ~$5_Шаталов_Лаб4.docx  ~WRL0604.tmp
lab4/src/: Makefile  Pi_Leibniz.cpp  Pi_Wallis.cpp  Program_1  Program_1.cpp  Program_2  Program_2.cpp  Square_rect.cpp  Square_tr.cpp
lab5_7/doc/: 215_Шаталов_Лаб7.docx
lab5_7/src/: CMakeLists.txt  computing.cpp  control.cpp  lib.cpp  lib.h
lab8/: 215_Шаталов_Лаб8.docx
